# minimal_tauri_leptos_bevy

./: .gitignore  Cargo.toml  README.md  index.html  splashscreen.html  styles.css
src/: bevy_interface.rs  leptos_interface.rs  main.rs
src-tauri/: Cargo.toml  tauri.toml
src-tauri/src/: main.rs
