[package]
name = "minimal_tauri_leptos_bevy-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bevy = "0.11.0"
# gloo = "0.8.1"
rand = "0.8.5"
# weblog = "0.3.0"
bevy_panorbit_camera = "0.6.1"
# web-sys = { version = "0.3.64", features = ["Document", "HtmlElement"] }
# crossbeam-channel = "0.5.8"
# futures-lite = "1.13.0"

[workspace]
members = ["src-tauri"]
