[package]
name = "minimal_tauri_leptos_bevy-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bevy = "0.11.0"
rand = "0.8.5"
bevy_panorbit_camera = "0.6.1"

url = "2.4.0"
tungstenite = { version = "0.20.0", features = ["rustls"] }  # "rustls" avoids need for OpenSSL!
ws_stream_wasm = "0.7.4"


# tungstenite = { version = "0.20.0", features = ["native-tls"] }
# tungstenite = { version = "0.20.0", features = ["native-tls-vendored"] }
# openssl = { verion = "0.10", features = ["vendored"] }
# web-sys = { version = "0.3.64", features = ["Document", "HtmlElement"] }
# crossbeam-channel = "0.5.8"
# futures-lite = "1.13.0"

[workspace]
members = ["src-tauri"]
